<resources>
    <string name="app_name">Lux Android App</string>
    <string name="action_settings">Definições</string>
    <string name="start_updates">Iniciar experiência</string>
    <string name="stop_updates">Parar experiência</string>
    <string name="btn_show_map">Mostrar Mapa</string>
    <string name="btn_show_route">Mostrar Rota</string>
    <string name="btn_show_areas">Mostrar áreas de luz</string>
    <string name="btn_close">Fechar</string>
    <string name="btn_send">Enviar</string>
    <string name="login_form">Faça login</string>
    <string name="username">Nome</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="success">Successo</string>
    <string name="register">Registar</string>
    <string name="title_activity_login">Lux Android App</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
</resources>
